tests/parser/argument_validation/invalid_05.m.octave.out
In invalid_05.m, line 9
|     arguments
|     ^^^^^^^^^ style: end statement with a semicolon
In invalid_05.m, line 10
|         a uint32 = b * c
|                        ^ style: end statement with a semicolon
In invalid_05.m, line 11
|         b uint32
|           ^^^^^^ style: end statement with a semicolon
In invalid_05.m, line 12
|         c uint32
|           ^^^^^^ style: end statement with a semicolon
In invalid_05.m, line 16
| end
| ^^^ error: expected end of file, found KEYWORD instead
MISS_HIT Debug Summary: 1 file(s) analysed, 4 style issue(s), 1 error(s)
